--- a/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
+++ b/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
@@ -12,45 +12,26 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <com.youth.banner.Banner
-        android:id="@+id/eye_daily_banner"
+
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/daily_list_refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/eye_daily_banner_height"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/include_eye_daily_toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:banner_indicator_normal_color="@color/eye_daily_banner_normal_color"
-        app:banner_indicator_selected_color="@android:color/white"
-        app:banner_indicator_normal_width="@dimen/eye_daily_banner_normal_width"
-        app:banner_indicator_selected_width="@dimen/eye_daily_banner_selected_width"
-        />
-    <com.knight.kotlin.module_eye_daily.view.MyCustomBannerIndicator
-        android:id="@+id/indicator"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/eye_daily_banner_indicator_height"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/eye_daily_banner" />
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <com.scwang.smart.refresh.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-<!--    <com.scwang.smart.refresh.layout.SmartRefreshLayout-->
-<!--        android:id="@+id/daily_list_refreshLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/include_eye_daily_toolbar"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent">-->
+            <com.yanzhenjie.recyclerview.SwipeRecyclerView
+                android:id="@+id/rv_daily_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-<!--        <com.scwang.smart.refresh.header.ClassicsHeader-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"/>-->
+        <com.scwang.smart.refresh.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-<!--            <com.yanzhenjie.recyclerview.SwipeRecyclerView-->
-<!--                android:id="@+id/rv_daily_list"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
-
-<!--        <com.scwang.smart.refresh.footer.ClassicsFooter-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"/>-->
-
-<!--    </com.scwang.smart.refresh.layout.SmartRefreshLayout>-->
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
