--- a/module_eye_daily/src/main/res/values/colors.xml
+++ b/module_eye_daily/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="eye_daily_white">#FFFFFFFF</color>
     <color name="eye_daily_banner_normal_color">#D1D1D1</color>
     <color name="eye_daily_banner_indicator_bg">#33FFFFFF</color>
+    <color name="eye_daily_text_title">#333333</color>
 </resources>
