修改优化日报首页页面列表

--- a/library_base/src/main/res/values/styles.xml
+++ b/library_base/src/main/res/values/styles.xml
@@ -33,7 +33,11 @@
 
     <style name="base_AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight"/>
 
+    <!--圆形图片样式-->
+    <style name="base_circleStyle">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
 
-
+    </style>
 
 </resources>
