--- a/module_eye_daily/src/main/res/values/dimens.xml
+++ b/module_eye_daily/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="eye_daily_banner_normal_width">6dp</dimen>
     <dimen name="eye_daily_banner_selected_width">10dp</dimen>
     <dimen name="eye_daily_banner_indicator_height">26dp</dimen>
-    <dimen name="eye_daily_image_item_height">200dp</dimen>
+    <dimen name="eye_daily_image_item_height">210dp</dimen>
     <dimen name="eye_daily_text_item_height">52dp</dimen>
     <dimen name="eye_daily_text_item_title_margin_left">10dp</dimen>
     <dimen name="eye_daily_text_item_image_margin_left">10dp</dimen>
@@ -22,4 +22,12 @@
     <dimen name="eye_daily_item_title_margin_left">10dp</dimen>
     <dimen name="eye_daily_item_title_text_size">16sp</dimen>
     <dimen name="eye_daily_item_desc_text_size">14sp</dimen>
+    <dimen name="eye_daily_banner_message_height">60dp</dimen>
+    <dimen name="eye_daily_banner_message_rl_padding_left">10dp</dimen>
+    <dimen name="eye_daily_tv_head_banner_text_size">18sp</dimen>
+    <dimen name="eye_daily_tv_head_banner_text_size_margin_left">10dp</dimen>
+    <dimen name="eye_daily_tv_head_banner_text_size_margin_top">10dp</dimen>
+    <dimen name="eye_daily_tv_eye_banner_head_drawable_padding">5dp</dimen>
+    <dimen name="eye_daily_tv_banner_video_time_padding_right">4dp</dimen>
+    <dimen name="eye_daily_tv_item_video_time_margin_right">10dp</dimen>
 </resources>
