--- a/module_eye_daily/src/main/res/values/colors.xml
+++ b/module_eye_daily/src/main/res/values/colors.xml
@@ -10,7 +10,9 @@
     <color name="eye_daily_banner_normal_color">#D1D1D1</color>
     <color name="eye_daily_banner_indicator_bg">#33FFFFFF</color>
     <color name="eye_daily_text_title">#333333</color>
-    <color name="eye_daily_item_message_bg">#33FFFFFF</color>
+    <color name="eye_daily_item_message_bg">#66FFFFFF</color>
     <color name="eye_daily_item_title_text_color">#FFFFFF</color>
     <color name="eye_daily_item_desc_text_color">#CCFFFFFF</color>
+    <color name="eye_daily_banner_message_bg">#66FFFFFF</color>
+    <color name="eye_daily_head_banner_text_title">#333333</color>
 </resources>
