--- a/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_banner_item.xml
+++ b/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_banner_item.xml
@@ -1,68 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <import type="com.knight.kotlin.library_util.DateUtils"/>
+
+   <variable
+       name="model"
+       type="com.knight.kotlin.library_base.entity.EyeItemEntity" />
+
+    </data>
 
 
-    <ImageView
-        android:id="@+id/eye_daily_iv_banner"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:bind="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/tv_daily_banner_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/eye_daily_type_icon"
-        android:gravity="center"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="1"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_daily_banner_title"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/eye_daily_banner_message_height"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        android:maxLines="1"
-        android:paddingLeft="@dimen/eye_daily_banner_message_rl_padding_left"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="1"
-        android:text="sdsds"
-        android:textColor="@color/eye_daily_item_title_text_color"
-        android:textSize="@dimen/eye_daily_item_title_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <ImageView
+            android:id="@+id/eye_daily_iv_banner"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            bind:imageUrl="@{model.data.component9().feed}"/>
 
 
-    <TextView
-        android:id="@+id/tv_daily_banner_video_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/eye_daily_video_time_icon"
-        android:gravity="right|center_vertical"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="1"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:paddingRight="@dimen/eye_daily_tv_banner_video_time_padding_right"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_daily_banner_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/eye_daily_type_icon"
+            android:gravity="center"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:text="@{model.data.category}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_daily_banner_title"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/eye_daily_banner_message_height"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:paddingLeft="@dimen/eye_daily_banner_message_rl_padding_left"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:text="@{model.data.title}"
+            android:textColor="@color/eye_daily_item_title_text_color"
+            android:textSize="@dimen/eye_daily_item_title_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+
+        <TextView
+            android:id="@+id/tv_daily_banner_video_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/eye_daily_video_time_icon"
+            android:gravity="right|center_vertical"
+            android:shadowColor="@android:color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:textColor="@android:color/white"
+            android:text="@{DateUtils.INSTANCE.formatDateMsByMS(model.data.duration * 1000)}"
+            android:textStyle="bold"
+            android:paddingRight="@dimen/eye_daily_tv_banner_video_time_padding_right"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+</layout>
