--- a/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
+++ b/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
@@ -11,7 +11,9 @@
             name="videoEntity"
             type="com.knight.kotlin.library_base.entity.EyeData" />
 
-
+<!--        <variable-->
+<!--            name="videoModel"-->
+<!--            type="com.fmt.kotlin.eyepetizer.provider.model.Data" />-->
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,6 +28,51 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+
+
+        <com.scwang.smart.refresh.layout.SmartRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/jz_video"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+
+            <com.scwang.smart.refresh.header.ClassicsHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/eye_video_detail_tv_title_margin_start"
+                            android:layout_marginTop="@dimen/eye_video_detail_tv_title_margin_top"
+                            android:text="@{videoEntity.title}"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/eye_video_detail_tv_title_text_size"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+
+                </androidx.core.widget.NestedScrollView>
+
+
+
+
+
+        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
