--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -98,4 +98,17 @@
         <attr name="stroke_color" format="color" />
         <attr name="stroke_width" format="dimension|reference"/>
     </declare-styleable>
+    <!--折叠TextView -->
+    <declare-styleable name="ExpandableTextView">
+        <attr format="integer" name="etv_expandLines"/>
+        <attr format="reference" name="etv_shrinkBitmap"/>
+        <attr format="reference" name="etv_expandBitmap"/>
+        <attr format="color" name="etv_textStateColor"/>
+        <attr format="color" name="etv_textContentColor"/>
+        <attr format="dimension" name="etv_textContentSize"/>
+        <attr format="string" name="etv_textShrink"/>
+        <attr format="string" name="etv_textExpand"/>
+        <attr format="integer" name="etv_animationTime"/>
+        <attr format="boolean" name="etv_showLine"/>
+    </declare-styleable>
 </resources>
