--- a/module_eye_video_detail/src/main/res/values/dimens.xml
+++ b/module_eye_video_detail/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
     <dimen name="eye_video_detail_tv_desc_margin_top">10dp</dimen>
     <dimen name="eye_video_detail_tv_desc_margin_end">10dp</dimen>
     <dimen name="eye_video_detail_tv_desc_text_size">14sp</dimen>
+    <dimen name="eye_video_detail_tv_give_text_size">13sp</dimen>
+    <dimen name="eye_video_detail_tv_collect_text_size">13sp</dimen>
+    <dimen name="eye_video_detail_tv_comment_text_size">13sp</dimen>
+    <dimen name="eye_video_detail_tv_share_text_size">13sp</dimen>
 </resources>
